2020-08-19  Petasis George  <petasis@iit.demokritos.gr>
        * library/tkdnd_unix.tcl: Fixed bug #40.

        * pkgIndex.tcl.in:
        * CMakeLists.txt:
        * library/tkdnd.tcl: Added the option for enabling debug messages
        through the global variable ::TKDND_DEBUG_LEVEL (before loading the
        package).

2020-08-18  Petasis George  <petasis@iit.demokritos.gr>
        * .travis.yml: Added installation of libxcursor1 and libxcursor-dev.

        * configure.ac: Added checks for lib Xcursor.

        * library/tkdnd_generic.tcl: Fixed bug #44, where "string is entier"
        may not be available.

        * library/tkdnd_generic.tcl: Fixed bug #43, renamed
        ::tkdnd::platform_independent_types to
        generic::platform_independent_types.

2020-03-03  Petasis George  <petasis@iit.demokritos.gr>
        * CMakeLists.txt:
        * configure.ac:
        * unix/Cursors.c: Corrections in build system and fixed some warnings
        under unix.

2020-02-23  Petasis George  <petasis@iit.demokritos.gr>
        * demos/custom_cursors.tcl:
        * demos/cursors: Added a demo script for shwoing the interface for
        custom cursors.

        * generic/*: Moved cursor utilities from unix to the generic folder.
        * unix/Cursors.c: TkDND_GetCursor moved in generic.
        Added support for custom cursors.

2019-07-15  Petasis George  <petasis@iit.demokritos.gr>
        * library/tkdnd.tcl: Allowed ::tkdnd::drag_source to accept multiple
        mouse buttons, as the event that initiates a drag action.

        * library/tkdnd.tcl: Merged pull request #36.
        (https://github.com/petasis/tkdnd/pull/36).

        * unix/TkDND_XDND.c: Changed how TkDND_GetToplevelFromWrapper()
        selects the topelvel. Patch from Florian Pigorsch.
        (https://github.com/petasis/tkdnd/issues/34)

2019-07-14  Petasis George  <petasis@iit.demokritos.gr>
        * doc/tkDND.n: